k8s/03-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-vibe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register-vibe
  template:
    metadata:
      labels:
        app: register-vibe
    spec:
      containers:
        - name: register-vibe
          image: registry.digitalocean.com/roelvd-registry/register-vibe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: register-vibe-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: register-vibe
